# autoproxy

./: .env.example  .gitignore  DESIGN.md  README.md  autoproxy.py  config.openbao.example.json  proxies.txt.example  pyproject.toml  requirements.txt
autoproxy/: __init__.py  models.py  reporter.py  runner.py
autoproxy/adapters/: __init__.py  adspower_adapter.py  camoufox_adapter.py  clash_adapter.py  openbao_source.py  sub2api_adapter.py  txt_source.py
configs/: clash-verge-standard.yaml
docs/: README.md  audit_report.md  implementation.md
docs/superpowers/plans/: 2026-04-20-camoufox-adapter.md
docs/superpowers/specs/: 2026-04-20-camoufox-adapter-design.md
examples/: openbao-proxies.example.json
openbao-tool/: README.md  config.openbao.example.json  openbao_tool.py
tests/: test_adspower_adapter.py  test_camoufox_adapter.py  test_clash_adapter.py  test_cli.py  test_openbao_source.py  test_openbao_tool.py  test_proxy_model.py  test_reporter.py  test_runner.py  test_sub2api_adapter.py  test_txt_source.py
